--- a/main.html
+++ b/main.html
@@ -44,7 +44,7 @@
         Profile Content Here
     </div>
 
-    <script src="main.js"></script>
+    <script src="functions.js"></script>
 </body>
 </html>
 
